[gd_scene load_steps=8 format=2]

[ext_resource path="res://font/Symtext.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://livroBiblioteca.png" type="Texture" id=2]
[ext_resource path="res://Gastos.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 75
font_data = ExtResource( 1 )

[node name="Gastos" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="livro" type="Sprite" parent="CanvasLayer"]
position = Vector2( 325.25, 172.25 )
scale = Vector2( 0.359635, 0.340278 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="pagina1" type="Label" parent="CanvasLayer/livro"]
anchor_left = 0.097
anchor_right = 0.494
anchor_bottom = 0.896
margin_left = -960.24
margin_top = -492.0
margin_right = -960.48
margin_bottom = -539.68
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.772549, 0.0509804, 0.0509804, 1 )
custom_fonts/font = SubResource( 3 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProximaPagina" type="Button" parent="CanvasLayer/livro"]
anchor_left = 0.763
anchor_top = 0.891
anchor_right = 0.962
anchor_bottom = 0.977
margin_left = -959.587
margin_top = -539.831
margin_right = -960.667
margin_bottom = -539.711
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Próxima Página"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltarPagina" type="Button" parent="CanvasLayer/livro"]
margin_left = -820.97
margin_top = 422.449
margin_right = -496.97
margin_bottom = 521.449
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Voltar Página"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltarBiblioteca" type="Button" parent="CanvasLayer/livro"]
margin_left = 174.0
margin_top = -159.0
margin_right = 719.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Voltar"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/livro/ProximaPagina" to="CanvasLayer/livro" method="_on_ProximaPagina_pressed"]
[connection signal="pressed" from="CanvasLayer/livro/VoltarPagina" to="CanvasLayer/livro" method="_on_VoltarPagina_pressed"]
[connection signal="pressed" from="CanvasLayer/livro/VoltarBiblioteca" to="CanvasLayer/livro" method="_on_VoltarBiblioteca_pressed"]
